# OSINT-fraud-detection

./: .env.example  .gitignore  README.md  implementation.md  pyproject.toml
lists/: telegram_test.txt
report/: report.md
scripts/: __init__.py  bootstrap_telegram_session.py  run_tests.py
src/osint/: __init__.py  config.py  logging_setup.py  schemas.py
src/osint/cli/: __init__.py  dashboard.py  process.py  scrape.py
src/osint/processing/: __init__.py  clean.py  store.py
src/osint/scrapers/: __init__.py  base.py  browser.py  instagram.py  telegram.py  whatsapp.py  x.py
tests/: conftest.py  test_clean.py  test_conftest.py  test_logging.py  test_m3_scrapers.py  test_run_tests_wrapper.py  test_schemas.py  test_store.py  test_telegram.py
tests/fixtures/instagram/: hashtag_scamalert.html  post_demo.html  profile_legit.html
tests/fixtures/telegram/: messages.json
tests/fixtures/whatsapp/: invite_demo.html
tests/fixtures/x/: nitter_search_phishing.html
